--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.2.1",
     "cloudinary": "^1.35.0",
     "js-cookie": "^3.0.1",
+    "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
@@ -25,7 +26,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-responsive-carousel": "^3.2.23",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.34",
